reworked cloud functions in typescript
